[package]
name = "ml-runner"
version = "0.1.0"
authors = ["jamesharden122 <loudonvillewf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
surrealdb = "2"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
polars = "0.50.0"
ml_backend = { package = "ml-runner", path = "../ml-project/ml-runner" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
