[package]
name = "ml-runner"
version = "0.1.0"
authors = ["jamesharden122 <loudonvillewf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
surrealdb = { version = "2.3.2", optional = true }
axum = { version = "0.7.0", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"], optional = true }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
polars = "0.50.0"
ml_backend = { package = "bento_queries", path = "../../bento_queries", optional = true }
pyo3-polars = "0.23.1"
pyo3 = "0.25.1"
serde_json = "1.0.143"

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:surrealdb",
    "dep:ml_backend",
    "dep:axum",
    "dep:tokio",
]

desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
