[package]
name = "ml-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
polars = { version = "0.50.0", features = ["lazy", "fmt", "parquet", "dtype-date", "dtype-datetime"] }
pyo3-polars = { version = "0.14", features = ["derive"] }
surrealdb = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
pyo3-build-config = "0.21"
